--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "wakatime-box"
+name: "wakatime-gist"
 author: "abordage"
 description: "Show your WakaTime statistics in a pinned gist for your GitHub profile"
 
