--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
 name: Update Gist
 on:
   schedule:
-    - cron: "50 4 * * *"
+    - cron: "10 3 * * *"
 
   workflow_dispatch:
 
@@ -17,7 +17,7 @@ jobs:
           WAKA_API_KEY: ${{ secrets.WAKA_API_KEY }}
 
           MAX_RESULT: 5
-          # supported: last_7_days, last_30_days, last_6_months, last_year
+          # SUPPORTED: last_7_days, last_30_days, last_6_months, last_year
           DATE_RANGE: last_7_days
           # REPLACE WITH YOUR GIST ID
           GIST_ID: 3ca87dc8189d1dd86a66374ed9177889
