--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -4,7 +4,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron: "00 18 * * *"
+    - cron: "30 3 * * 1"
 
 jobs:
   linkChecker:
