--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,14 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Update gist
         uses: abordage/wakatime-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           WAKA_API_KEY: ${{ secrets.WAKA_API_KEY }}
 
+          GIST_ID: 3ca87dc8189d1dd86a66374ed9177889 # REPLACE WITH YOUR GIST ID
+          DATE_RANGE: last_7_days # SUPPORTED: last_7_days, last_30_days, last_6_months, last_year
           MAX_RESULT: 5
-          # SUPPORTED: last_7_days, last_30_days, last_6_months, last_year
-          DATE_RANGE: last_7_days
-          # REPLACE WITH YOUR GIST ID
-          GIST_ID: 3ca87dc8189d1dd86a66374ed9177889
