--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,6 +13,9 @@ jobs:
 
       - name: Update gist
         uses: abordage/wakatime-box@master
+        with:
+          jobSummary: true
+
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           WAKA_API_KEY: ${{ secrets.WAKA_API_KEY }}
