--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,9 +14,10 @@ jobs:
       - name: Update gist
         uses: abordage/wakatime-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          WAKA_API_KEY: ${{ secrets.WAKA_API_KEY }}
-
-          GIST_ID: 3ca87dc8189d1dd86a66374ed9177889 # REPLACE WITH YOUR GIST ID
-          DATE_RANGE: last_7_days # SUPPORTED: last_7_days, last_30_days, last_6_months, last_year
-          MAX_RESULT: 5
+          # REPLACE WITH YOUR GIST ID
+          INPUT_GIST_ID: 3ca87dc8189d1dd86a66374ed9177889
+          # SUPPORTED: last_7_days, last_30_days, last_6_months, last_year
+          INPUT_DATE_RANGE: last_7_days
+          INPUT_MAX_RESULT: 5
+          INPUT_GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          INPUT_WAKA_API_KEY: ${{ secrets.WAKA_API_KEY }}
