--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.8.2",
+    "@actions/github": "^5.0.3",
     "@actions/http-client": "^2.0.1",
     "@octokit/rest": "^18.12.0",
     "dotenv": "^16.0.1"
