feat: Add support for custom backend base URL.

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,3 +24,4 @@ jobs:
           INPUT_GH_TOKEN: ${{ secrets.GH_TOKEN }}
           INPUT_WAKA_API_KEY: ${{ secrets.WAKA_API_KEY }}
           INPUT_GIST_ID: ${{ secrets.GIST_ID }}
+          INPUT_WAKATIME_BASE_URL: ${{ secrets.WAKATIME_BASE_URL }}
