feat(project)!: migrate to ESM, Rollup, and Node 24
BREAKING CHANGE: Complete rewrite with modern tooling.

- Migrate from CommonJS to ESM modules
- Replace ncc with Rollup for bundling
- Upgrade to Node.js 24 runtime
- Refactor codebase into modular structure
- Update all dependencies to latest versions
- Add comprehensive CI/CD with semantic-release
- Improve configuration handling for local development

Users upgrading from v2:
- Update workflow to use abordage/wakatime-box@v3
- No changes required for input parameters

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -12,8 +12,8 @@ body:
           required: true
   - type: input
     attributes:
-      label: What version of lighthouse-box are you using?
-      description: 'For example: 1.0.3'
+      label: What version of wakatime-box are you using?
+      description: 'For example: 3.0.0'
     validations:
       required: true
   - type: textarea
