--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-node_modules
-*.log
-.idea
+# Dependencies
+node_modules/
+
+# Environment
 .env
-/dist/formatLine.js
+.env.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# TypeScript cache
+*.tsbuildinfo
