--- a/package.json
+++ b/package.json
@@ -1,39 +1,54 @@
 {
   "name": "wakatime-box",
-  "version": "1.3.0",
+  "version": "3.0.0",
   "description": "Show your WakaTime statistics in a pinned gist for your GitHub profile",
+  "type": "module",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "engines": {
+    "node": ">=24"
+  },
   "scripts": {
-    "build": "rimraf dist/ && tsc src/index.ts --outDir dist && ncc build dist/index.js --minify",
-    "lint": "eslint src/ --ext .ts --fix",
-    "run-local": "npm run build && node dist/index.js"
+    "build": "rimraf dist && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "dev": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "wakatime",
-    "wakatime-box",
-    "pinned gist"
+    "github-actions",
+    "gist",
+    "pinned-gist",
+    "coding-statistics"
   ],
   "author": "Pavel Bychko <abordage.dev@gmail.com> (https://abordage.dev)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abordage/wakatime-box.git"
+  },
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^6.0.0",
-    "@actions/http-client": "^2.0.1",
-    "@octokit/rest": "^21.0.2",
-    "dotenv": "^16.0.3"
+    "@actions/core": "^1.11.1",
+    "@actions/http-client": "^2.2.3",
+    "@octokit/rest": "^22.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.0",
-    "@types/node-fetch": "^2.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "@vercel/ncc": "^0.38.3",
-    "eslint": "^8.35.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "ts-node": "^10.8.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.7.2"
+    "@eslint/js": "^9.17.0",
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-typescript": "^12.3.0",
+    "@types/node": "^24.0.0",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.17.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.53.3",
+    "tslib": "^2.8.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.0"
   }
 }
